# SimGaugesCAN

./: .gitignore  LICENSE.txt  README.md  cansimconnector.spec  common.py  config.json  pyproject.toml  requirements.txt  runme.py  test.py  test_gauges.py  tests_arrow_left_down.py  tests_arrow_left_up.py  tests_arrow_right_up.py
cansimconnector/: main.py
cansimconnector/arrowiiiturbodevices/: airspeed.py  altitude.py  annunciators.py  arrowiiiturbodevices.py  attitude.py  busvolts.py  buttonspanel.py  fuelselector.py  gyrosuction.py  heading.py  indicators1.py  indicators2.py  leftbottompanel.py  mpr.py  rpm.py  stec30alt.py  transponder.py  turnroll.py  vertspeed.py
cansimconnector/cansimlib/: __init__.py  canclient.py  common.py  devices.py  xplaneclient.py  xplanewsclient.py
cansimmanager/: __init__.py  __main__.py  arrowiiiturbodevices.py  can.py  common.py  devices.py  main.py  sim.py
cansimmanager/arrowiiiturbodevices/: airspeed.py  altitude.py  arrowiiiturbodevices.py  attitude.py  busvolts.py  fuelselector.py  gyrosuction.py  heading.py  indicators.py  indicators1.py  indicators2.py  leftbottompanel.py  mpr.py  rpm.py  stec30alt.py  turnroll.py  vertspeed.py
src/cansimconnector/: __about__.py  __main__.py  cli.py  main.py
src/cansimconnector/arrowiiiturbodevices/: AI-Plugins-cl.lua  AI-Plugins.lua  AI-Plugon-ap-pitch.lua  __init__.py  airspeed.py  altitude.py  annunciators.py  arrowiiiturbodevices.py  attitude.py  busvolts.py  buttonspanel.py  fuelselector.py  gyrosuction.py  heading.py  indicators1.py  indicators2.py  leftbottompanel.py  mpr.py  rpm.py  stec30alt.py  transponder.py  turnroll.py  vertspeed.py
src/cansimconnector/cansimlib/: __init__.py  canclient.py  common.py  devices.py  xplanewsclient.py
src/cansimconnector/xplanewebclient/: __init__.py  xplaneclient.py
tests/: tests_arrow_bottom.py  tests_arrow_left_down.py  tests_arrow_left_up.py  tests_arrow_right_up.py
