[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "cansimconnector"
description = "Interface betweeen CANSim and X-Plane/FS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "click", 
  "aiohttp", 
  "pyserial", 
  "python-can", 
  "websockets", 
  'uvloop ; platform_system != "Windows"',
  'winloop ; platform_system == "Windows"',]

dynamic = ["version"]

[project.optional-dependencies]
dev = ["pyinstaller"]
test = ["coverage"]

[project.scripts]
cansimconnector = "cansimconnector:cansimconnector"

[tool.hatch.version]
path = "src/cansimconnector/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cansimconnector tests}"

[tool.coverage.run]
source_pkgs = ["cansimconnector", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_demo/__about__.py",
]

[tool.coverage.paths]
hatch_demo = ["src/cansimconnector", "*/cansimconnector/src/cansimconnector"]
tests = ["tests", "*/cansimconnector/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]